# CommonApi

./: CMakeLists.txt  CMakePresets.json  CommonApi.sln  CommonApi.vcxproj  CommonApi.vcxproj.filters  README.md
LICENSES/: glm_license.txt
deprecated/: ThreadPool.cpp  ThreadPool.h
include/CommonApi/: Exports.h
include/CommonApi/Mathematics/: PerlinNoise3d.h
include/CommonApi/MultiThreading/: EventPolicy.h  EventSystem.h  FileSystem.h  Profiler.h  Synchronized.h  UniquePointer.h  Vector.h
include/CommonApi/MultiThreading/ThreadPools/: MinimalThreadPool.h
include/CommonApi/Physics/: Hitboxes.h  RayCasting.h
include/CommonApi/PlatformAbstractions/: Console.h  Thread.h
include/CommonApi/Utilities/: BinPacker.h  Flag.h  Functions.h  MeyersSingleton.h  PackedRecordBuffer.h  PathFinder.h  PathFinderContext.h  UniqueOrderedQueue.h  Vector3d.h
include/CommonApi/Utilities/EventSystems/: EventSystem.h  EventSystemConcept.h  MultiEventSystem.h  ScopedEventSystem.h  SingleCallbackEventSystem.h
include/MultiThreading/: EventPolicy.cpp  EventSuperSystem.h  EventSystem.h  ThreadPool.h
include/PlatformAbstractions/: ErrorMapper.h
include/Utilities/: EventSystem.h  EventSystemConcept.h  GridContext.h  MultiEventSystem.h  PathFinder.h  PathFinderContext.h  ScopedEventSystem.h
include/Utilities/EventSystems/: EventSystem.h  EventSystemConcept.h  ScopedEventSystem.h  SingleCallbackEventSystem.h
install/clang-debug/include/: ThreadPool.h
install/clang-debug/include/CommonApi/Mathematics/: Common.h  PerlinNoise2d.h  PerlinNoise3d.h
install/clang-debug/include/CommonApi/MultiThreading/: Deque.h  EventSuperSystem.h  Logger.h  MemoryPool.h  PointerControlBlock.h  Queue.h  SharedPointer.h  TaskCoordinator.h  UniqueTaskCoordinator.h  WeakPointer.h
install/clang-debug/include/CommonApi/PlatformAbstractions/: ErrorMapper.h
install/clang-debug/include/CommonApi/Utilities/: ArrayNd.h  GridContext.h  PackedRecordBuffer.h  RollingWindow.h  SampleTracker.h  SortedVector.h  StringConversions.h  VectorNd.h
install/clang-debug/include/Mathematics/: PerlinNoise2d.h  PerlinNoise3d.h
install/clang-debug/include/MultiThreading/: Logger.h  TaskCoordinator.h  ThreadPool.h  UniqueTaskCoordinator.h
install/clang-debug/include/Utilities/: Flag.h  GridContext.h  UniqueOrderedQueue.h  Vector3d.h
install/clang-release/include/MultiThreading/: EventSuperSystem.h  MemoryPool.h  ThreadPool.h  Vector.h
install/clang-release/include/Physics/: Hitboxes.h  RayCasting.h
install/clang-release/include/Utilities/: ArrayNd.h  PathFinderContext.h  RollingWindow.h
install/clang-release/include/Utilities/EventSystems/: MultiEventSystem.h
install/mingw-debug-static/include/MultiThreading/: Deque.h  Synchronized.h
install/mingw-debug-static/include/Physics/: RayCasting.h
install/mingw-debug-static/include/Utilities/EventSystems/: MultiEventSystem.h
install/mingw-debug/include/Mathematics/: Common.h
install/mingw-debug/include/MultiThreading/: EventPolicy.h  PointerControlBlock.h  SharedPointer.h  WeakPointer.h
install/mingw-debug/include/Utilities/: BinPacker.h  MeyersSingleton.h  SampleTracker.h  StringConversions.h  VectorNd.h
install/mingw-debug/include/Utilities/EventSystems/: EventSystem.h  EventSystemConcept.h
install/mingw-release-static/include/MultiThreading/: Logger.h  ThreadPool.h
install/mingw-release-static/include/PlatformAbstractions/: Console.h
install/mingw-release-static/include/Utilities/EventSystems/: MultiEventSystem.h
install/mingw-release-static/lib/cmake/CommonApi/: CommonApiTargets.cmake
install/mingw-release/include/MultiThreading/: Deque.h  FileSystem.h
install/mingw-release/include/PlatformAbstractions/: ErrorMapper.h
install/msvc-debug/include/MultiThreading/: EventSystem.h  Profiler.h  UniquePointer.h
install/msvc-debug/include/PlatformAbstractions/: Console.h
install/msvc-debug/include/Utilities/: Functions.h  SortedVector.h
install/msvc-release/include/: Exports.h
install/msvc-release/include/MultiThreading/: Queue.h  Synchronized.h
install/msvc-release/include/Utilities/: PathFinder.h
install/msvc-release/lib/: CommonApi.lib
src/: test.cpp
src/CommonApi/MultiThreading/: FileSystem.cpp  Logger.cpp
src/CommonApi/Physics/: Hitboxes.cpp
src/CommonApi/PlatformAbstractions/: Console.cpp  ErrorMapper.cpp  Thread.cpp
src/CommonApi/Utilities/: Functions.cpp
src/MultiThreading/: FileSystem.cpp  Logger.cpp  ThreadPool.cpp
src/Physics/: Hitboxes.cpp
src/PlatformAbstractions/: Console.cpp  ErrorMapper.cpp
src/Utilities/: Functions.cpp
tests/: test.cpp
(+6 files in other folders)
